# nlean

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  CLAUDE.md  Directory.Build.props  Directory.Packages.props  Dockerfile  Dockerfile.profile  LICENSE  Lean.sln  MEMORY.md  NuGet.config  README.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
client-cmds/: lean-client-cmd.sh  nlean-cmd.sh
config/: node-config.json  validator-config-4x-nlean.yaml  validator-config.quickstart.yaml  validator-config.yaml
docs/: gossip-orphan-backfill-design.md
docs/plans/: 2026-02-22-full-spec-alignment-design.md  2026-02-23-devnet3-alignment-design.md  2026-03-14-sync-gating-deadlock-design.md  2026-03-22-fork-choice-visualization-design.md  2026-03-22-fork-choice-visualization.md  2026-03-23-devnet4-design.md  2026-03-23-devnet4-implementation.md  2026-04-17-spectest-framework.md  2026-04-23-spectest-harness-design.md  2026-04-23-spectest-harness.md
local-nuget/: Nethermind.Libp2p.1.0.0-preview.51.nupkg  Nethermind.Libp2p.1.0.0-preview.51.snupkg  Nethermind.Libp2p.Core.1.0.0-preview.51.nupkg  Nethermind.Libp2p.Core.1.0.0-preview.51.snupkg  Nethermind.Libp2p.Protocols.Pubsub.1.0.0-preview.51.nupkg  Nethermind.Libp2p.Protocols.Pubsub.1.0.0-preview.51.snupkg  Nethermind.Libp2p.Protocols.Quic.1.0.0-preview.51.nupkg  Nethermind.Libp2p.Protocols.Quic.1.0.0-preview.51.snupkg
native/lean-crypto-ffi/: Cargo.toml  build.rs
native/lean-crypto-ffi-test/: Cargo.toml
native/lean-crypto-ffi-test/src/: lib.rs
native/lean-crypto-ffi/include/: lean_crypto_ffi.h
native/lean-crypto-ffi/src/: lib.rs
scripts/: build-native.ps1  build-native.sh  profile-nlean-memory.sh
scripts/interop/: run-lean-quickstart-devnet2.sh  run-lean-quickstart-devnet3-catchup.sh  run-lean-quickstart-devnet3.sh
scripts/libp2p/: build-patched-libp2p-package.sh  build-patched-pubsub-package.sh  build-patched-quic-package.sh
scripts/quickstart/: run-nlean-from-quickstart.sh
src/Lean.Client/: BuildInfo.cs  CliOptions.cs  Lean.Client.csproj  Program.cs
src/Lean.Consensus/: BlockByRootStore.cs  ChainStateTransition.cs  ConsensusConfig.cs  ConsensusHeadState.cs  ConsensusService.cs  ConsensusServiceV2.cs  ConsensusStateStore.cs  DefaultForkChoiceStateTransition.cs  Devnet2ForkChoiceStateTransition.cs  ForkChoiceApplyResult.cs  ForkChoiceNodeState.cs  ForkChoiceStateTransition.cs  ForkChoiceStore.cs  IBlockByRootStore.cs  IConsensusService.cs  IConsensusStateStore.cs  IForkChoiceStateTransition.cs  ISlotIndexStore.cs  IStateByRootStore.cs  IStateRootIndexStore.cs  Lean.Consensus.csproj  SignedAggregatedAttestationGossipDecoder.cs  SignedAttestationGossipDecoder.cs  SignedBlockGossipDecoder.cs  SignedBlockWithAttestationGossipDecoder.cs  SlotIndexStore.cs  StateByRootStore.cs  StateRootIndexStore.cs
src/Lean.Crypto/: Lean.Crypto.csproj  LeanCryptoError.cs  LeanCryptoException.cs  LeanMultiSig.cs  LeanSig.cs
src/Lean.Metrics/: IMetricsService.cs  Lean.Metrics.csproj  LeanMetrics.cs  MetricsConfig.cs  PrometheusMetricsService.cs
src/Lean.Network/: BlocksByRangeRpcRouter.cs  BlocksByRootPeerSelector.cs  BlocksByRootRpcRouter.cs  GossipTopicProvider.cs  GossipTopics.cs  IBlocksByRangeRpcRouter.cs  IBlocksByRootRpcRouter.cs  IGossipTopicProvider.cs  INetworkService.cs  IStatusRpcRouter.cs  Lean.Network.csproj  LeanBlocksByRangeProtocol.cs  LeanBlocksByRootProtocol.cs  LeanPubsubMessageId.cs  LeanReqRespCodec.cs  LeanRpcResponseCodes.cs  LeanStatusMessage.cs  LeanStatusProtocol.cs  Libp2pConfig.cs  Libp2pIdentityFactory.cs  Libp2pNetworkService.cs  RpcProtocols.cs  StatusRpcRouter.cs
src/Lean.Node/: Lean.Node.csproj  NodeApp.cs  (+1 more)
(+176 files in other folders)
